# little-bo-peep-exp

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  elm-watch.json  elm.json  flake.nix  fly.toml  package-lock.json  package.json  shell.nix  tailwind.config.js
backend/: main.rs
frontend/public/: styles.css
frontend/public/static/: elm-start.js  index.html  mathjax-elm.js
frontend/public/static/articles/: ch_1.emu
frontend/public/static/assets/: mathjaxconfig.js
frontend/public/static/assets/articles/: ch_1.emu  ch_2.emu
frontend/src/: Article.elm  Articles.elm  Assets.elm  Header.elm  Home.elm  Icon.elm  Main.elm  Model.elm  Msg.elm  Nav.elm  NotFound.elm  Page.elm  Styles.elm
src/: Main.elm  index.html
